--- a/.github/workflows/qiita-plugin-ci.yml
+++ b/.github/workflows/qiita-plugin-ci.yml
@@ -131,7 +131,7 @@ jobs:
 
           export PYTHONWARNINGS="ignore:Certificate for localhost has no \`subjectAltName\`"
 
-          nosetests --with-doctest --with-coverage -v --cover-package=qp_klp
+          nosetests --with-doctest --with-coverage -v --cover-package=qtp_job_output_folder
 
       - uses: codecov/codecov-action@v1
         with:
