--- a/.github/workflows/qiita-plugin-ci.yml
+++ b/.github/workflows/qiita-plugin-ci.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Install Qiita plugins
         shell: bash -l {0}
         run: |
-          conda create -q --yes -n qtp-job-output-folder python=3.6
+          conda create -q --yes -n qtp-job-output-folder python=3.6 pip==9.0.3
           conda activate qtp-job-output-folder
 
           export QIITA_SERVER_CERT=`pwd`/qiita-dev/qiita_core/support_files/server.crt
